加入註冊、重設密碼畫面

--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -103,7 +103,11 @@
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\jquery-3.2.1.slim.min.js" />
     <Content Include="js\jquery-3.3.1.min.js" />
+    <Content Include="js\jquery.twzipcode.js" />
+    <Content Include="js\jquery.twzipcode.min.js" />
     <Content Include="js\popper.min.js" />
+    <Content Include="js\twzipcode.js" />
+    <Content Include="js\yi.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +134,8 @@
     <Content Include="Views\_Member_LayoutPage1.cshtml" />
     <Content Include="Views\Member\Member.cshtml" />
     <Content Include="Views\Member\Login.cshtml" />
+    <Content Include="Views\Member\Register.cshtml" />
+    <Content Include="Views\Member\ForgotPassword.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
