--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CCity.cs" />
     <Compile Include="Models\streetName.cs">
       <DependentUpon>task03LabModel.tt</DependentUpon>
     </Compile>
