--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -111,23 +111,71 @@
     <Content Include="js\jquery-3.2.1.slim.min.js" />
     <Content Include="js\jquery-3.3.1.min.js" />
     <Content Include="js\popper.min.js" />
-    <Content Include="photo\drinksoup\4bec1788726f1_resized.jpg" />
-    <Content Include="photo\drinksoup\4bec17adc3341_resized.jpg" />
-    <Content Include="photo\drinksoup\apple_resized.jpg" />
-    <Content Include="photo\drinksoup\blackcoffee_resized.jpg" />
-    <Content Include="photo\drinksoup\Classic_bubble_tea_resized.jpg" />
-    <Content Include="photo\drinksoup\cocacola_resized.jpg" />
-    <Content Include="photo\drinksoup\coffee_resized.jpg" />
-    <Content Include="photo\drinksoup\greentea_resized.jpg" />
-    <Content Include="photo\drinksoup\lemon_resized.jpg" />
-    <Content Include="photo\drinksoup\Orange_resized.jpg" />
-    <Content Include="photo\drinksoup\redtea_resized.jpg" />
-    <Content Include="photo\drinksoup\s8_resized.jpg" />
+    <Content Include="photo\dessert\B1.jpg" />
+    <Content Include="photo\dessert\B10.jpg" />
+    <Content Include="photo\dessert\B11.jpg" />
+    <Content Include="photo\dessert\B12.jpg" />
+    <Content Include="photo\dessert\B2.jpg" />
+    <Content Include="photo\dessert\B3.jpg" />
+    <Content Include="photo\dessert\B4.jpg" />
+    <Content Include="photo\dessert\B5.jpg" />
+    <Content Include="photo\dessert\B6.jpg" />
+    <Content Include="photo\dessert\B7.jpg" />
+    <Content Include="photo\dessert\B8.jpg" />
+    <Content Include="photo\dessert\B9.jpg" />
+    <Content Include="photo\drinksoup\A1.jpg" />
+    <Content Include="photo\drinksoup\A10.jpg" />
+    <Content Include="photo\drinksoup\A11.jpg" />
+    <Content Include="photo\drinksoup\A12.jpg" />
+    <Content Include="photo\drinksoup\A2.jpg" />
+    <Content Include="photo\drinksoup\A3.jpg" />
+    <Content Include="photo\drinksoup\A4.jpg" />
+    <Content Include="photo\drinksoup\A5.jpg" />
+    <Content Include="photo\drinksoup\A6.jpg" />
+    <Content Include="photo\drinksoup\A7.jpg" />
+    <Content Include="photo\drinksoup\A8.jpg" />
+    <Content Include="photo\drinksoup\A9.jpg" />
+    <Content Include="photo\fastfood\E1.jpg" />
+    <Content Include="photo\fastfood\E10.jpg" />
+    <Content Include="photo\fastfood\E11.jpg" />
+    <Content Include="photo\fastfood\E12.jpg" />
+    <Content Include="photo\fastfood\E2.jpg" />
+    <Content Include="photo\fastfood\E3.jpg" />
+    <Content Include="photo\fastfood\E4.jpg" />
+    <Content Include="photo\fastfood\E5.jpg" />
+    <Content Include="photo\fastfood\E6.jpg" />
+    <Content Include="photo\fastfood\E7.jpg" />
+    <Content Include="photo\fastfood\E8.jpg" />
+    <Content Include="photo\fastfood\E9.jpg" />
+    <Content Include="photo\noodle\C1.jpg" />
+    <Content Include="photo\noodle\C10.jpg" />
+    <Content Include="photo\noodle\C11.jpg" />
+    <Content Include="photo\noodle\C12.jpg" />
+    <Content Include="photo\noodle\C2.jpg" />
+    <Content Include="photo\noodle\C3.jpg" />
+    <Content Include="photo\noodle\C4.jpg" />
+    <Content Include="photo\noodle\C5.jpg" />
+    <Content Include="photo\noodle\C6.jpg" />
+    <Content Include="photo\noodle\C7.jpg" />
+    <Content Include="photo\noodle\C8.jpg" />
+    <Content Include="photo\noodle\C9.jpg" />
     <Content Include="photo\productsindex\d10_resized.jpg" />
     <Content Include="photo\productsindex\dessert_resized.jpg" />
     <Content Include="photo\productsindex\fast-food_resized.jpg" />
     <Content Include="photo\productsindex\n1_resized.jpg" />
     <Content Include="photo\productsindex\r5_resized.jpg" />
+    <Content Include="photo\rice\D1.jpg" />
+    <Content Include="photo\rice\D10.jpg" />
+    <Content Include="photo\rice\D11.jpg" />
+    <Content Include="photo\rice\D12.jpg" />
+    <Content Include="photo\rice\D2.jpg" />
+    <Content Include="photo\rice\D3.jpg" />
+    <Content Include="photo\rice\D4.jpg" />
+    <Content Include="photo\rice\D5.jpg" />
+    <Content Include="photo\rice\D6.jpg" />
+    <Content Include="photo\rice\D7.jpg" />
+    <Content Include="photo\rice\D8.jpg" />
+    <Content Include="photo\rice\D9.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -167,9 +215,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Restaurent.cshtml" />
     <Content Include="Views\Products\Index.cshtml" />
-    <Content Include="Views\Products\Aproducts.cshtml" />
     <Content Include="scss\Astyle.scss" />
-    <Content Include="Views\Products\Bproducts.cshtml" />
     <Content Include="Views\Products\Drinkproducts.cshtml" />
     <Content Include="Views\Products\Dessertproducts.cshtml" />
     <Content Include="Views\Products\Noodleproducts.cshtml" />
@@ -185,7 +231,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="photo\dessert\" />
     <Folder Include="picture\" />
     <Folder Include="startbootstrap-sb-admin-gh-pages\" />
   </ItemGroup>
