--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -207,6 +208,9 @@
     <Content Include="Views\Home\Restaurent.cshtml" />
     <Content Include="Views\Home\OrderBusiness.cshtml" />
     <Content Include="Views\Home\OrderCustomer.cshtml" />
+    <Content Include="Views\Order\Order_deteail_bussiness.cshtml" />
+    <Content Include="Views\Order\Order_list_costomer.cshtml" />
+    <Content Include="Views\Order\Order_list_bussiness.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
