--- a/task03_0606/Web.config
+++ b/task03_0606/Web.config
@@ -41,7 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="task03LabEntities" connectionString="metadata=res://*/Models.task03LabModel.csdl|res://*/Models.task03LabModel.ssdl|res://*/Models.task03LabModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.6.73;initial catalog=task03Lab;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="task03LabEntities" connectionString="metadata=res://*/Models.task03LabModel.csdl|res://*/Models.task03LabModel.ssdl|res://*/Models.task03LabModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.2.105;initial catalog=task03Lab;user id=labUser;password=lab123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
